--- a/style.css
+++ b/style.css
@@ -105,6 +105,94 @@ header {
     background-color: var(--primary-color);
 }
 
+
+.insert {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.insert__headline {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.input {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.input__items {
+    width: auto;
+    margin-bottom: 15px;
+}
+
+.input__title-field {
+    width: 100%;
+    border: 1px solid #3d3d3d;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: none;
+}
+
+.input__title-field:focus-visible {
+    border: 1px solid #2e778e;
+    outline: #2e778e;
+    border-radius: 10px;
+    color: #2e778e;
+}
+
+.input__flex {
+    display: flex;
+    justify-content: center;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    border-top: 2px solid #dedede;
+    display: flex;
+    z-index: 300;
+}
+
+.footer__link {
+    flex: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0px;
+    background-color: none;
+}
+
+footer > a:hover {
+    background-color: #dedede;
+}
+
+footer > a:active {
+    background-color: #f1f1f1;
+}
+
+.active {
+    background-color: #f1f1f1;
+}
+
+footer > a > img {
+    height: 25px;
+}
+
+
+
+
+
+
+
+
+
+
 .primary-color {
     background-color: var(--primary-color);
 }
