--- a/style.css
+++ b/style.css
@@ -1,225 +1,222 @@
 body {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .main {
-    width: 100%;
-    margin-top: 15vh;
-    margin-bottom: 60px;
-    height: auto;
+  width: 100%;
+  margin-top: 15vh;
+  margin-bottom: 60px;
+  height: auto;
 }
 
 header {
-    width: 100%;
-    height: auto;
-    padding: 10px 0px;
-    background-color: #fff;
-    border-bottom: 2px solid #dedede;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 200;
-    position: fixed;
-    top: 0;
-    color: #2e778e;
+  width: 100%;
+  height: auto;
+  padding: 10px 0px;
+  background-color: #fff;
+  border-bottom: 2px solid #dedede;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 200;
+  position: fixed;
+  top: 0;
+  color: #2e778e;
 }
 
 .header__img {
-    width: 200px;
-    height: auto;
+  width: 200px;
+  height: auto;
 }
 
-
 .card {
-    width: 95%;
-    height: auto;
-    background-color: #fff;
-    border-radius: 20px;
-    /* border: 2px solid #dedede; */
-    /* border-style: dashed; */
-    box-shadow: 0px 0px 10px #dedede;
-    margin-bottom: 20px;
-    margin-left: 5px;
-    margin-right: 5px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
+  width: 95%;
+  height: auto;
+  background-color: #fff;
+  border-radius: 20px;
+  /* border: 2px solid #dedede; */
+  /* border-style: dashed; */
+  box-shadow: 0px 0px 10px #dedede;
+  margin-bottom: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
 }
 
 .card__img {
-    align-self: flex-end;
-    margin-bottom: 20px;
+  align-self: flex-end;
+  margin-bottom: 20px;
 }
 
 .card-headline {
-    font-size: 1.3rem;
+  font-size: 1.3rem;
 }
 
 .card__btn {
-    margin-top: 20px;
-    background-color: #2e778e;
-    color: #fff;
-    border: none;
-    border-radius: 10px;
-    padding: 10px 20px;
+  margin-top: 20px;
+  background-color: #2e778e;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
 }
 
 .hiddenText {
-    display: none;
+  display: none;
 }
 
 .visibleText {
-    display: block;
+  display: block;
 }
 
 .card__text {
-    padding-top: 20px;
-    font-size: .8rem;
-    color: #2e778e;
+  padding-top: 20px;
+  font-size: 0.8rem;
+  color: #2e778e;
 }
 
 .badges {
-    list-style-type: none;
-    align-self: flex-start;
-    margin-top: 20px;
-    display: flex;
+  list-style-type: none;
+  align-self: flex-start;
+  margin-top: 20px;
+  display: flex;
 }
 
 .badges__items {
-    display: flex;
-    align-items: center;
-    padding: 5px 10px;
-    /* background-color: #83d6ff; */
-    background-color: #f1f1f1;
-    border-radius: 10px;
-    font-size: .6rem;
-    margin-right: 5px;
-    box-shadow: inset 0 0 5px #dedede;
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  /* background-color: #83d6ff; */
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  font-size: 0.6rem;
+  margin-right: 5px;
+  box-shadow: inset 0 0 5px #dedede;
 }
 
 .badges__items__dot {
-    display: block;
-    border-radius: 10px;
-    background-color: none;
-    width: 6px;
-    height: 6px;
-    z-index: 300;
-    margin-right: 5px;
-    background-color: var(--primary-color);
+  display: block;
+  border-radius: 10px;
+  background-color: none;
+  width: 6px;
+  height: 6px;
+  z-index: 300;
+  margin-right: 5px;
+  background-color: var(--primary-color);
 }
 
-
 .insert {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .insert__headline {
-    width: 100%;
-    margin-bottom: 20px;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .input {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    width: 65%;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  width: 65%;
 }
 
 .input__items {
-    width: auto;
-    margin-bottom: 15px;
+  width: auto;
+  margin-bottom: 15px;
 }
 
 .input__title-field {
-    width: 65%;
-    border: 1px solid #3d3d3d;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: none;
+  width: 65%;
+  border: 1px solid #3d3d3d;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: none;
 }
 
 .input__title-field:focus-visible {
-    border: 1px solid #2e778e;
-    outline: #2e778e;
-    border-radius: 10px;
-    color: #2e778e;
+  border: 1px solid #2e778e;
+  outline: #2e778e;
+  border-radius: 10px;
+  color: #2e778e;
 }
 
 .input__flex {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .footer {
-    position: fixed;
-    bottom: 0px;
-    width: 100%;
-    height: auto;
-    background-color: #fff;
-    border-top: 2px solid #dedede;
-    display: flex;
-    z-index: 300;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: auto;
+  background-color: #fff;
+  border-top: 2px solid #dedede;
+  display: flex;
+  z-index: 300;
 }
 
 .footer__link {
-    flex: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0px;
-    background-color: none;
+  flex: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0px;
+  background-color: none;
 }
 
 footer > a:hover {
-    background-color: #dedede;
+  background-color: #dedede;
 }
 
 footer > a:active {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
 .active {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
-
 .primary-color {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
 .secondary-color {
-    background-color: var(--secondary-color);
+  background-color: var(--secondary-color);
 }
 
 .third-color {
-    background-color: var(--third-color);
+  background-color: var(--third-color);
 }
 
 .fourth-color {
-    background-color: var(--fourth-color);
+  background-color: var(--fourth-color);
 }
 
 .fifth-color {
-    background-color: var(--fifth-color);
+  background-color: var(--fifth-color);
 }
 
 .bookmark {
-        box-sizing: border-box; 
-        -moz-box-sizing: border-box; 
-        -webkit-box-sizing: border-box; 
-        position: absolute;
-        top: -10px; 
-        right: 18px;
-        height: 30px; 
-        width: 15px; 
-        padding: 0px; 
-        -webkit-transform: rotate(0deg) skew(0deg); 
-        transform: rotate(0deg) skew(0deg); 
-        border-left: 10px solid #2e778e; 
-        border-right: 10px solid #2e778e; 
-        border-bottom: 10px solid transparent; 
-    }
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  position: absolute;
+  top: -10px;
+  right: 17px;
+  height: 30px;
+  width: 14px;
+  padding: 0%;
+  -webkit-transform: rotate(0deg) skew(0deg);
+  transform: rotate(0deg) skew(0deg);
+  border-left: 10px solid #2e778e;
+  border-right: 10px solid #2e778e;
+  border-bottom: 10px solid transparent;
+}
