--- a/style.css
+++ b/style.css
@@ -220,3 +220,20 @@ footer > a:active {
   border-right: 10px solid #2e778e;
   border-bottom: 10px solid transparent;
 }
+
+.bookmarked {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  position: absolute;
+  top: -10px;
+  right: 17px;
+  height: 30px;
+  width: 14px;
+  padding: 0%;
+  -webkit-transform: rotate(0deg) skew(0deg);
+  transform: rotate(0deg) skew(0deg);
+  border-left: 10px solid #380d76;
+  border-right: 10px solid #380d76;
+  border-bottom: 10px solid transparent;
+}
